single_nodes/app/foxids/foxids.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foxids-deployment
  labels:
    app: foxids
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foxids
  template:
    metadata:
      labels:
        app: foxids
    spec:
      containers:
        - name: foxids
          image: foxids/foxids:2.2.2
          #image: foxids/foxids:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8800
          resources:
            requests:
              cpu: 0.25
              memory: 256Mi
            limits:
              cpu: 0.5
              memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foxids-control-deployment
  labels:
    app: foxids-control
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foxids-control
  template:
    metadata:
      labels:
        app: foxids-control
    spec:
      containers:
        - name: foxids-control
          image: foxids/foxids:2.2.2
          #image: foxids/foxids:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8800
          resources:
            requests:
              cpu: 0.25
              memory: 256Mi
            limits:
              cpu: 0.5
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: foxids
spec:
  ports:
    - port: 8800
      targetPort: 8800
      protocol: TCP
  type: ClusterIP
  selector:
    app: foxids
---
apiVersion: v1
kind: Service
metadata:
  name: foxids-control
spec:
  ports:
    - port: 8800
      targetPort: 8800
      protocol: TCP
  type: ClusterIP
  selector:
    app: foxids-control
