single_nodes/app/foxids/foxids-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foxids-ingress-http
  annotations: 
   nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
   nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
   cert-manager.io/cluster-issuer: "letsencrypt" 
spec:	
  ingressClassName: nginx
  tls:
    - hosts:
      - id.test-single-nodes.foxids.com
      - control.test-single-nodes.foxids.com 
      secretName: foxids-tls
    
  rules:
  - host: control.test-single-nodes.foxids.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foxids-control
            port:
              number: 8800
  - host: id.test-single-nodes.foxids.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foxids
            port:
              number: 8800
